--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -678,7 +678,7 @@ button.button-paginator:disabled {
   background: url("../../assets/icons/burger-dark.svg");
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 320px) {
   .burger {
     display: inline-block;
   }
